--- a/notebooks/vegetation-92-download-ndvi.ipynb
+++ b/notebooks/vegetation-92-download-ndvi.ipynb
@@ -30,11 +30,12 @@
     },
     {
       "cell_type": "markdown",
-      "id": "29b6e704-07b6-47d2-bba2-119702de1172",
+      "id": "b1b3078f",
       "metadata": {},
       "source": [
-        "You will also need to import any libraries you are using in this\n",
-        "notebook, since they won’t carry over from the previous notebook:"
+        "_In In February 2019, massive forest fires erupted in several parts of **Bandipur National Park**, located in **Chamarajanagar district** of **Karnataka**, **India.**_.\n",
+        "\n",
+        "_This project focuses on **analyzing vegetation cover changes** in **Chamarajanagar district** between 2017 and 2021, with the aim of assessing the impact of the **Bandipur forest fire**._"
       ]
     },
     {
