--- a/notebooks/vegetation-92-download-ndvi.ipynb
+++ b/notebooks/vegetation-92-download-ndvi.ipynb
@@ -35,7 +35,7 @@
       "source": [
         "_In In February 2019, massive forest fires erupted in several parts of **Bandipur National Park**, located in **Chamarajanagar district** of **Karnataka**, **India.**_.\n",
         "\n",
-        "_This project focuses on **analyzing vegetation cover changes** in **Chamarajanagar district** between 2017 and 2021, with the aim of assessing the impact of the **Bandipur forest fire**._"
+        "_This workflow focuses on **analyzing vegetation cover changes** in **Chamarajanagar district** between 2017 and 2021, with the aim of assessing the impact of the **Bandipur forest fire**._"
       ]
     },
     {
